Update LongStorageOptimized.java